tests/ui/lint/snapshots/irrefutable_if_let_tuple.snap
---
source: tests/ui/lint/mod.rs
---
  ● Redundant `if let` pattern
   ╭─[test.lis:3:10]
 2 │ pub fn test(pair: (int, int)) {
 3 │   if let (a, b) = pair {
   ·          ───┬──
   ·             ╰── always matches
 4 │     let _ = a + b;
   ╰────
  help: Use `let` instead of `if let` since the pattern cannot fail · code: [lint.redundant_if_let]
