tests/ui/lint/snapshots/irrefutable_or_pattern_if_let_warning.snap
---
source: tests/ui/lint/mod.rs
---
  ● Redundant `if let` pattern
   ╭─[test.lis:3:10]
 2 │ fn test(opt: Option<int>) {
 3 │   if let Some(_) | None = opt {
   ·          ───────┬──────
   ·                 ╰── always matches
 4 │     ();
   ╰────
  help: Use `let` instead of `if let` since the pattern cannot fail · code: [lint.redundant_if_let]
