tests/ui/lint/snapshots/json_non_serializable_sender_field.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Non-serializable field in a `#[json]` type
   ╭─[test.lis:4:7]
 3 │ pub struct Pipe {
 4 │   tx: Sender<int>,
   ·       ─────┬─────
   ·            ╰── a channel cannot be JSON-encoded
 5 │ }
   ╰────
  help: Go's `encoding/json` cannot marshal channels. Drop the field, or exclude it with `#[json(skip)]` · code: [infer.json_non_serializable_field]
