tests/ui/lint/snapshots/json_skipped_field_on_marshal_indent.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Fields skipped by JSON
   ╭─[test.lis:6:3]
 5 │   pub host: string,
 6 │   port: int,
   ·   ──┬─
   ·     ╰── declared without `pub`
 7 │   debug: bool,
   ·   ──┬──
   ·     ╰── declared without `pub`
 8 │ }
   ╰────
    ╭─[test.lis:12:30]
 11 │   let c = Config { host: "localhost", port: 8080, debug: true }
 12 │   let _ = json.MarshalIndent(c, "", "  ")
    ·                              ┬
    ·                              ╰── `port` and `debug` will not be serialized
 13 │   let _ = c.port
    ╰────
  help: Only `pub` fields are written to JSON. Add `#[json]` to `Config`, or mark `port` and `debug` as `pub` · code: [lint.json_skipped_field]
