tests/ui/lint/snapshots/let_and_return_after_statements.snap
---
source: tests/ui/lint/mod.rs
---
  ● Redundant binding before return
   ╭─[test.lis:4:3]
 3 │   let doubled = n * 2
 4 │   let result = doubled + 1
   ·   ────────────┬───────────
   ·               ╰── bound and immediately returned
 5 │   result
   ╰────
  help: Return the value directly instead of binding it first · code: [lint.let_and_return]
